[package]
name = "jou"
version = "0.1.0"
edition = "2021"

[dependencies]
home = "0.5.9"
ratatui = "0.26.0"
crossterm = "0.27.0"
tui-textarea = "0.4.0"
chrono = "0.4.33"
clap = { version = "4.5.0", features = ["derive", "string"] }
age = { version =  "0.10.0", features = ["aes"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "debuginfo"
